Created Get by ID function and run swagger again
